# emo

./: .gitignore  README.md  pyproject.toml
data/: training_phrases.json
scripts/: eval_checkpoint.py  generate_phrases.py  serve_model.py  sweep_all.py  sweep_phrases.py
src/: chat.py  eval_retrieval.py  eval_sft.py  train_sft.py
src/data/: emoji_tokens.py  filter_rl_prompts.py  generate_rl_prompts.py  generate_rl_prompts_v2.py  generate_sft_dataset.py  prompts.py
src/rl/: debug_rollout.py  emoji_completer.py  env.py  judge.py  play_game.py  reward.py  train.py
src/rl/custom/: benchmark_generate.py  env.py  generate.py  modal_train.py  reward.py  train.py
src/rl/tinker/: debug_rollout.py  env.py  judge.py  play_game.py  train.py
src/viz/: before_after.py  emoji_frequency.py  grpo_sanity_check.py  multiturn_grpo_validation.py  plot_reward_diagnostics.py  reward_validation.py  temperature_sweep.py  token_audit.py  wandb_run_analysis.py
tests/rl/custom/: test_generate.py  test_train.py  test_train_phase4.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/game/guess/: route.ts
web/app/api/game/start/: route.ts
web/lib/: emoji-gen.ts  game-log.ts  game-state.ts  phrase-gen.ts  phrases.ts
