[project]
name = "emoji-maxxing"
version = "0.1.0"
description = "Training LLMs to communicate exclusively in emoji"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "matplotlib>=3.9",
    "modal>=0.73",
    "numpy>=2.4.3",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "regex",
    "sentence-transformers",
    "tinker>=0.16.1",
    "tinker-cookbook>=0.1.0",
    "torch>=2.11.0",
    "tqdm",
    "transformers>=5.3.0",
    "wandb",
]

[project.optional-dependencies]
train = [
    "transformers",
    "torch",
]
